--- a/css/estilo.css
+++ b/css/estilo.css
@@ -214,7 +214,8 @@ footer p {
     border: var(--color-claro) solid 3px;
     overflow: hidden; }
     #registerForm .imgContainer #imgSelected {
-      width: 200px; }
+      width: 200px;
+      object-fit: contain; }
   #registerForm label {
     font-weight: bold;
     font-size: 3rem;
