--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -277,8 +277,10 @@ footer{
         border-radius: 50%;
         border: map-get($paleta, verde-claro ) solid 3px;
         overflow: hidden;
+        
         #imgSelected{
             width: 200px;
+            object-fit: contain;
         }
     }
     label{
